# django_postgres_backup

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
django_postgres_backup/: apps.py  common.py  settings.py
django_postgres_backup/management/commands/: postgres-backup.py  postgres-restore.py  postgres_backup.py  postgres_restore.py
django_postgres_backup/tests/: test_commands.py
example_app/: admin.py  models.py
example_app/management/commands/: makedemo.py
example_app/migrations/: 0001_initial.py
example_project/: settings.py  urls.py
scripts/: reset_local_database.sh  setup_project.sh
